--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       }
     </style>
   </head>
-  <body">
+  <body>
     <div id="spinner" class="loader">
       <div class="loading"></div>
     </div>
